--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "best-bible",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Fetch, parse, and analyze the Bible easily with JavaScript",
   "scripts": {
     "test": "node -r esm test/index.js",
@@ -35,6 +35,7 @@
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
     "esm": "^3.2.25",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
   }
 }
