--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "best-bible",
-  "version": "1.1.2",
+  "type": "module",
+  "version": "1.1.3",
   "description": "Fetch, parse, and analyze the Bible easily with JavaScript",
   "scripts": {
     "build:types": "tsc --emitDeclarationOnly",
-    "build:cjs": "babel src --out-dir dist --extensions \".ts,.js\" --presets @babel/preset-env,@babel/preset-typescript",
-    "build:esm": "babel src --out-dir dist/esm --extensions \".ts,.js\" --presets @babel/preset-env,@babel/preset-typescript",
+    "build:cjs": "BUILD_TARGET=cjs babel src --out-dir dist --extensions \".ts,.js\"",
+    "build:esm": "BUILD_TARGET=esm babel src --out-dir dist/esm --extensions \".ts,.js\"",
     "build": "npm run build:types && npm run build:cjs && npm run build:esm",
     "prepublishOnly": "npm run build"
   },
@@ -46,26 +47,5 @@
     "typescript": "^5.5.4",
     "undici": "^6.19.4",
     "undici-types": "^6.19.4"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-typescript"
-    ],
-    "plugins": [
-      [
-        "module-resolver",
-        {
-          "root": [
-            "./dist"
-          ],
-          "alias": {
-            "./data/bible.json": "./data/bible.json",
-            "./utils/abbreviations": "./utils/abbreviations",
-            "./utils/validation": "./utils/validation"
-          }
-        }
-      ]
-    ]
   }
 }
