MAJOR: ROLLBACK TO REVISION 1.1.5

--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "best-bible",
-  "version": "1.3.1",
-  "type": "module",
+  "version": "1.3.3",
   "description": "Fetch, parse, and analyze the Bible easily with JavaScript",
   "scripts": {
     "test": "node -r esm test/index.js",
-    "build:ts": "tsc --project tsconfig.json",
-    "build:cjs": "cp -r src/index.cjs dist",
-    "build": "npm run build:ts && npm run build:cjs",
+    "build:cjs": "cp src/index.js dist/index.cjs.js",
+    "build:esm": "npx babel src --out-dir dist --presets @babel/preset-env --copy-files",
+    "build": "npm run build:cjs && npm run build:esm",
     "prepublishOnly": "npm run build"
   },
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "exports": {
-    "import": "./dist/index.js",
-    "require": "./dist/index.cjs"
-  },
-  "types": "dist/index.d.ts",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/The-Best-Codes/best-bible.git"
@@ -40,23 +34,14 @@
     "@babel/cli": "^7.24.8",
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
-    "@babel/preset-typescript": "^7.24.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "esm": "^3.2.25",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7",
-    "typescript": "^5.5.4",
-    "url": "^0.11.3"
+    "path": "^0.12.7"
   },
   "babel": {
     "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "modules": false
-        }
-      ],
-      "@babel/preset-typescript"
+      "@babel/preset-env"
     ],
     "plugins": [
       [
