--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "best-bible",
-  "version": "1.3.5",
+  "version": "1.4.0",
   "description": "Fetch, parse, and analyze the Bible easily with JavaScript",
   "scripts": {
-    "build": "tsup && npm run copy-assets",
-    "copy-assets": "cp -R src/data dist",
+    "build:cjs": "tsc --project tsconfig.cjs.json || true && mkdir -p dist/cjs/data && cp src/data/bible.json dist/cjs/data/",
+    "build:esm": "tsc --project tsconfig.esm.json || true && mkdir -p dist/esm/data && cp src/data/bible.json dist/esm/data/",
+    "build": "npm run build:cjs && npm run build:esm",
     "prepublishOnly": "npm run build"
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/esm/index.js",
+      "types": "./dist/types/index.d.ts"
     }
   },
   "repository": {
@@ -40,6 +41,7 @@
     "@babel/cli": "^7.24.8",
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
+    "@types/node": "^20.14.12",
     "babel-plugin-module-resolver": "^5.0.2",
     "esm": "^3.2.25",
     "fs": "^0.0.1-security",
