--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "best-bible",
-  "version": "1.4.4",
+  "version": "1.4.5",
   "description": "Fetch, parse, and analyze the Bible easily with JavaScript",
   "scripts": {
     "build:cjs": "tsc --project tsconfig.cjs.json || true && mkdir -p dist/cjs/data && cp src/data/bible.json dist/cjs/data/",
     "build:esm": "tsc --project tsconfig.esm.json || true && mkdir -p dist/esm/data && cp src/data/bible.json dist/esm/data/",
-    "build:browser": "esbuild src/browser.ts --bundle --minify --sourcemap --format=iife --global-name=BestBible --platform=browser --target=es2015 --outfile=dist/browser/best-bible.min.js",
+    "build:browser": "esbuild src/browser.ts --bundle --minify --sourcemap --format=iife --platform=browser --target=es2015 --outfile=dist/browser/best-bible.min.js",
     "build": "npm run build:cjs && npm run build:esm && npm run build:browser",
     "prepublishOnly": "npm run build"
   },
