--- a/.github/workflows/update_security_md.yml
+++ b/.github/workflows/update_security_md.yml
@@ -48,12 +48,14 @@ jobs:
           sed -i '/^| Version/,/^$/c\'"$TABLE_CONTENT" $SECURITY_FILE
 
       - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git fetch origin
           git checkout main
-          git pull
+          git pull --rebase origin main
           git add SECURITY.md
           git commit -m "Update SECURITY.md for new release" || exit 0
           git push
