--- a/.github/workflows/update_security_md.yml
+++ b/.github/workflows/update_security_md.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Get current version
         id: get_version
-        run: echo "::set-output name=version::$(node -p "require('./package.json').version")"
+        run: echo "::set-output name=version::$(node -p \"require('./package.json').version\")"
 
       - name: Update SECURITY.md
         run: node .github/scripts/update-security.js ${{ steps.get_version.outputs.version }}
