--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "best-bible",
-  "version": "1.5.6",
+  "version": "1.5.7",
   "description": "Fetch, parse, and analyze the Bible easily with JavaScript",
   "scripts": {
     "build:cjs": "tsc --project tsconfig.cjs.json || true && mkdir -p dist/cjs/data && cp src/data/bible.json dist/cjs/data/",
@@ -14,10 +14,10 @@
   "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/cjs/index.js",
-      "import": "./dist/esm/index.js",
       "types": "./dist/types/index.d.ts",
-      "browser": "./dist/browser/best-bible.min.js"
+      "browser": "./dist/browser/best-bible.min.js",
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/esm/index.js"
     }
   },
   "browser": "./dist/browser/best-bible.min.js",
