--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "best-bible",
-  "version": "1.6.4",
+  "version": "1.6.5",
   "description": "Fetch, parse, and analyze the Bible easily with JavaScript",
   "scripts": {
     "build:cjs": "tsc --project tsconfig.cjs.json || true && mkdir -p dist/cjs/data && cp src/data/bible.json dist/cjs/data/",
     "build:esm": "tsc --project tsconfig.esm.json || true && mkdir -p dist/esm/data && cp src/data/bible.json dist/esm/data/",
     "build:browser": "esbuild src/browser.ts --bundle --minify --sourcemap --format=iife --platform=browser --target=es2015 --outfile=dist/browser/best-bible.min.js",
-    "build": "npm run build:cjs && npm run build:esm && npm run build:browser",
+    "minify:cjs": "find dist/cjs -name '*.js' -type f -exec terser {} --compress --mangle --output {} \\;",
+    "minify:esm": "find dist/esm -name '*.js' -type f -exec terser {} --compress --mangle --output {} \\;",
+    "build": "npm run build:cjs && npm run build:esm && npm run build:browser && npm run minify:cjs && npm run minify:esm",
     "prepublishOnly": "npm run build"
   },
   "files": [
@@ -51,6 +53,7 @@
     "esm": "^3.2.25",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
+    "terser": "^5.34.1",
     "typescript": "^5.6.2"
   }
 }
