--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "best-bible",
-  "version": "1.6.6",
+  "version": "1.6.7",
   "description": "Fetch, parse, and analyze the Bible easily with JavaScript",
   "scripts": {
+    "prebuild": "rm -rf dist",
     "build:cjs": "tsc --project tsconfig.cjs.json || true && mkdir -p dist/cjs/data && cp src/data/bible.json dist/cjs/data/",
     "build:esm": "tsc --project tsconfig.esm.json || true && mkdir -p dist/esm/data && cp src/data/bible.json dist/esm/data/",
-    "build:browser": "esbuild src/browser.ts --bundle --minify --sourcemap --format=iife --platform=browser --target=es2015 --outfile=dist/browser/best-bible.min.js",
-    "minify:cjs": "find dist/cjs -name '*.js' -type f -exec terser {} --compress --mangle --output {} \\;",
-    "minify:esm": "find dist/esm -name '*.js' -type f -exec terser {} --compress --mangle --output {} \\;",
-    "build": "npm run build:cjs && npm run build:esm && npm run build:browser && npm run minify:cjs && npm run minify:esm",
+    "build:browser": "esbuild src/browser.ts --bundle --minify --format=iife --platform=browser --target=es2015 --outfile=dist/browser/best-bible.min.js --tree-shaking=true --minify-whitespace --minify-identifiers --minify-syntax",
+    "minify:cjs": "find dist/cjs -name '*.js' -type f -exec terser {} --compress passes=3,pure_getters,toplevel,unsafe_math --mangle --output {} \\;",
+    "minify:esm": "find dist/esm -name '*.js' -type f -exec terser {} --compress passes=3,pure_getters,toplevel,unsafe_math --mangle --output {} \\;",
+    "build": "npm run prebuild && npm run build:cjs && npm run build:esm && npm run build:browser && npm run minify:cjs && npm run minify:esm",
     "prepublishOnly": "npm run build"
   },
   "files": [
@@ -48,12 +49,15 @@
   },
   "homepage": "https://github.com/The-Best-Codes/best-bible#readme",
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.11",
     "@types/node": "^22.9.0",
+    "better-sqlite3": "^11.5.0",
     "esbuild": "^0.24.0",
     "esm": "^3.2.25",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "terser": "^5.36.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
 }
