--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "npm run prebuild && npm run build:cjs && npm run build:esm && npm run build:browser && npm run minify:cjs && npm run minify:esm",
     "prepublishOnly": "npm run build"
   },
+  "packageManager": "pnpm@9.14.2",
   "files": [
     "dist",
     "README.md",
@@ -49,9 +50,14 @@
   },
   "homepage": "https://github.com/The-Best-Codes/best-bible#readme",
   "devDependencies": {
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.1",
     "@types/node": "^22.9.0",
     "esbuild": "^0.24.0",
+    "rollup": "^4.27.3",
     "terser": "^5.36.0",
+    "tslib": "^2.8.1",
     "typescript": "^5.6.3"
   }
 }
