--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "best-bible",
-  "version": "1.6.8",
+  "version": "1.6.7",
   "description": "Fetch, parse, and analyze the Bible easily with JavaScript",
   "scripts": {
     "prebuild": "rm -rf dist",
     "build:cjs": "bun build src/index.ts --outdir dist/cjs --target node --format cjs --minify",
     "build:esm": "bun build src/index.ts --outdir dist/esm --target node --format esm --minify",
-    "build:types": "tsc --declaration --emitDeclarationOnly --project tsconfig.json",
+    "build:types": "tsc --project tsconfig.types.json",
     "build:browser": "bun build src/browser.ts --outfile dist/browser/best-bible.min.js --target browser --minify",
-    "build": "npm run prebuild && npm run build:cjs && npm run build:esm && npm run build:browser && npm run build:types",
+    "build": "bun run prebuild && bun run build:cjs && bun run build:esm && bun run build:browser && bun run build:types",
     "prepublishOnly": "npm run build",
     "test": "bun test"
   },
@@ -50,16 +50,9 @@
   },
   "homepage": "https://github.com/The-Best-Codes/best-bible#readme",
   "devDependencies": {
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.1",
     "@types/bun": "^1.1.14",
     "@types/node": "^22.10.1",
     "bun-types": "^1.1.37",
-    "esbuild": "^0.24.0",
-    "rollup": "^4.27.4",
-    "terser": "^5.36.0",
-    "tslib": "^2.8.1",
     "typescript": "^5.7.2"
   }
 }
