--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "best-bible",
-  "version": "1.6.9",
+  "version": "1.7.0",
   "description": "Fetch, parse, and analyze the Bible easily with JavaScript",
   "scripts": {
     "prebuild": "rm -rf dist",
@@ -9,10 +9,10 @@
     "build:types": "tsc --project tsconfig.types.json",
     "build:browser": "bun build src/browser.ts --outfile dist/browser/best-bible.min.js --target browser --minify",
     "build": "bun run prebuild && bun run build:cjs && bun run build:esm && bun run build:browser && bun run build:types",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "bun run build",
     "test": "bun test"
   },
-  "packageManager": "bun@1.1.37",
+  "packageManager": "bun@1.1.38",
   "files": [
     "dist",
     "README.md",
@@ -52,7 +52,7 @@
   "devDependencies": {
     "@types/bun": "^1.1.14",
     "@types/node": "^22.10.1",
-    "bun-types": "^1.1.37",
+    "bun-types": "^1.1.38",
     "typescript": "^5.7.2"
   }
 }
