better typing, esmodules in dev

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "rootDir": "./src",
-    "allowJs": true
+    "allowJs": true,
+    "resolveJsonModule": true
   },
   "include": ["src"],
   "exclude": ["dist", "node_modules", "src/browser.ts"]
