--- a/tsconfig.types.json
+++ b/tsconfig.types.json
@@ -11,7 +11,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "resolveJsonModule": true
   },
   "include": ["src/index.ts"],
   "exclude": ["dist", "node_modules", "src/browser.ts"]
